Fix file name case

--- a/src/Dashboard/Courses/Courses.css
+++ b/src/Dashboard/Courses/Courses.css
@@ -12,7 +12,9 @@
     justify-content: center;
     text-align: center;
 }
-
+.Admins-header .btn-add{
+  margin: 0;
+} 
 .nextsteps .numsteps .activeStep{
     font-size: 12px;
     font-weight: bold;
