--- a/src/Doctorwebsite/DashDoc/DashDoc.css
+++ b/src/Doctorwebsite/DashDoc/DashDoc.css
@@ -130,7 +130,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 400px;
+    height: 430px;
 }
 
 .titlePerform {
@@ -164,6 +164,12 @@ h3 {
 .studentChartContainer canvas{
   width: 250px;
   height: 200px;
+}
+.coursesChartContainer {
+  width: 100%;
+  max-width: 390px;
+  height: 320px;
+  margin: auto;
 }
 
 /* ================= RESPONSIVE ================= */
@@ -204,17 +210,19 @@ h3 {
   .StudentAnalysis,
   .CourseAnalysis {
     flex: 1 1 100%;
-    height: auto;
   }
 
-  canvas {
-    
+  .coursesChartContainer canvas {
+    width: 200px;
   }
 }
 
 /* ===== Mobile (<= 768px) ===== */
 @media (max-width: 768px) {
-
+  .coursesChartContainer {
+    max-width: 260px;
+    height: 260px;
+  }
   /* Total boxes */
   .total-boxsDoc {
     flex-direction: column;
@@ -301,8 +309,8 @@ h3 {
     align-items: flex-start;
   }
 
-  canvas {
-    
+  .coursesChartContainer canvas {
+    width: 200px;
   }
 }
 
