--- a/src/Components/FooterDoctor/FooterDoctor.css
+++ b/src/Components/FooterDoctor/FooterDoctor.css
@@ -4,14 +4,16 @@
     gap: 40px;
     padding: 40px 60px;
     margin-top: 60px;
-    background: linear-gradient(135deg, #0079C8, #003B62);
+    background: linear-gradient(135deg,#003B62, #0079C8);
     border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 
 /* Logo + description */
 .footerb1 {
-  flex: 2;
+  flex: 3;
+  padding: 0 10px;
+  border-right: 1px dotted #EDEDED ;
 }
 
 .footerb1 .SidebarLogo {
@@ -27,6 +29,7 @@
 }
 .footerb1 .SidebarLogo p {
   color: #FFFFFF;
+  font-size: 22px;
   font-weight: 600;
 }
 
@@ -59,6 +62,10 @@
   color: #E8E8E8;
   margin-bottom: 8px;
 }
+.footerb3 p {
+color:#001354;
+font-weight: 500;
+}
 
 .footer-link {
     cursor: pointer;
@@ -82,7 +89,6 @@
 @media (max-width: 768px) {
   .FooterDoctor {
     flex-direction: column;
-    text-align: center;
     align-items: center;
   }
 
@@ -93,4 +99,17 @@
   .footerb1 .SidebarLogo {
     justify-content: center;
   }
+  .footerb1,.footerb2, .footerb3{
+    text-align: center;
+  }
+}
+.footerb2 span{
+  font-size: 14px;
+  color: #001354;
+  font-weight: 400;
+  text-decoration:underline;
+  cursor: pointer;
+}
+.footerb2 span:hover{
+  color: #000b2e;
 }
