--- a/src/Components/StarRating/StarRating.css
+++ b/src/Components/StarRating/StarRating.css
@@ -11,3 +11,23 @@
 .star.filled {
   color: #f5b301;
 }
+
+.starsadd {
+  display: flex;
+  gap: 6px;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+.staradd {
+  color: #ccc;
+  transition: color 0.2s;
+}
+
+.staradd.filled {
+  color: #f5b301;
+}
+
+.staradd:hover {
+  color: #f5b301;
+}
