--- a/src/Dashboard/DashboardAdmin/Dashboard.css
+++ b/src/Dashboard/DashboardAdmin/Dashboard.css
@@ -27,6 +27,7 @@
     font-weight: 600;
     line-height: 1.2;
     margin-bottom: 15px;
+    text-align: start;
 }
 
 /* ================= Cards Wrapper ================= */
