Fix file name case

--- a/src/Dashboard/Courses/Courses.css
+++ b/src/Dashboard/Courses/Courses.css
@@ -223,8 +223,8 @@
 }
 
 @media (max-width: 768px) {
-  .grid-form {
-    grid-template-columns: 1fr;
+  .modal-boxs .grid-form {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
