--- a/src/Doctorwebsite/DoctorCourses/DoctorCourses.css
+++ b/src/Doctorwebsite/DoctorCourses/DoctorCourses.css
@@ -60,7 +60,7 @@
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-
+    background-color: white;
     padding: 10px 40px 10px 14px;
     border-radius: 10px;
     cursor: pointer;
@@ -801,6 +801,12 @@
   height: 100px;
   border-radius: 8px;
 }
+.GradesComDat{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 /* ================= Course Header Responsive ================= */
 @media (max-width: 1024px) {
   .courseHeader {
@@ -906,6 +912,7 @@
   .notDoc .modal-box h3 {
     font-size: 16px;
   }
+  
 }
 
 /* ================= Calendar & Popup ================= */
