--- a/src/Doctorwebsite/PrfileDoc/PrfileDoc.css
+++ b/src/Doctorwebsite/PrfileDoc/PrfileDoc.css
@@ -81,7 +81,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 100%;
+  flex: 1;
 }
 
 .dataProfileDoc .dataProfileDocCard .dataBox {
